# balder

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.org  conanfile.py  genindex.html  index.html  objects.inv  search.html  searchindex.js
.github/workflows/: conan-gcc.yml  conan-msvc.yml  gh-pages.yml
api/: classFkinControls.html  classFkinDdsTopics.html  classFkinDecisionIndicator.html  classFkinFooter.html  classFkinInfoDash.html  classFkinPurseDashboard.html  classFkinSettings.html  classFkinStyle.html  classFkinTimeSeries.html  classInfoDirectionMagnitude.html  classInfoPlanning.html  classNlpInfo.html  classNorthEast.html  classRemoteProgramCommands.html  classRemoteProgramGroup.html  classSplash.html  classTabIconButton.html  classTimeChart.html  classTransformToNED.html  class_view_hierarchy.html  classbalder.html  dir_src.html  dir_src_qml.html  dir_src_qml_balder.html  dir_src_qml_components.html  file_src_qml_balder_balder.qml.html  file_src_qml_components_FkinControls.qml.html  file_src_qml_components_FkinDdsTopics.qml.html  file_src_qml_components_FkinDecisionIndicator.qml.html  file_src_qml_components_FkinFooter.qml.html  file_src_qml_components_FkinInfoDash.qml.html  file_src_qml_components_FkinPurseDashboard.qml.html  file_src_qml_components_FkinSettings.qml.html  file_src_qml_components_FkinStyle.qml.html  file_src_qml_components_FkinTimeSeries.qml.html  file_src_qml_components_InfoDirectionMagnitude.qml.html  file_src_qml_components_InfoPlanning.qml.html  file_src_qml_components_NlpInfo.qml.html  file_src_qml_components_NorthEast.qml.html  file_src_qml_components_RemoteProgramCommands.qml.html  (+31 more)
cmake/: OdinHelpers.cmake
data/: balder.desktop  balder.keystore  qtquickcontrols2.conf  qtresources.qrc  template.desktop
data/android/: AndroidManifest.xml.in
data/android/assets/: ospl.xml
data/languages/: fkin_en.ts  fkin_no.ts
data/ospl/: ospl_env.bat  ospl_env.sh
docs/: CMakeLists.txt  conf.py.in  emacs-install-pkgs.el  emacs-load.el  index.org
docs/_templates/: footer.html
docs/org/: intro.org  signals.org
docs/static/: style.puml
rst/: installation.html  intro.html  signals.html
src/: CMakeLists.txt
src/programs/balder/: balder.cpp
src/qml/: balder.qrc
src/qml/balder/: balder.qml
src/qml/components/: FkinControls.qml  FkinDdsTopics.qml  FkinDecisionIndicator.qml  FkinFooter.qml  FkinInfoDash.qml  FkinPurseDashboard.qml  FkinSettings.qml  FkinStyle.qml  FkinTimeSeries.qml  InfoDirectionMagnitude.qml  InfoPlanning.qml  NlpInfo.qml  NorthEast.qml  RemoteProgramCommands.qml  Splash.qml  TabIconButton.qml  TimeChart.qml  TransformToNED.qml
tools/docker/: gitlab-builder.df  run-balder.df
tools/profiles/: android_amd64_api28  android_amd64_api29  android_armv7_api29  android_armv8_api29  android_balder
tools/scripts/: linuxdeploy-plugin-ospl  run-in-docker.sh
